java_research_doc/Based on JFace Text Framework构建全功能代码编辑器/jtf.tutorial.part1/bin/jtf/tutorial/grammar/Expr.g
grammar Expr;

options {
	output = AST;
	ASTLabelType = CommonTree;
}

INT	:	'0'..'9'+;
ID	:	('a'..'z' | 'A'..'Z')+;
WS	:	(' ' | '\t' | '\r' | '\n')+ { $channel = HIDDEN; };

prog	:	stat+
	;

stat	:	expr ';'		-> expr
	|	ID '=' expr ';'		-> ^('=' ID expr)
	|	';'			->
	;
	
expr
	:	multExpr
		( '+'^ multExpr
		| '-'^ multExpr
		)*
	;
	
multExpr
	:	atom
		( '*'^ atom
		| '/'^ atom
		)*
	;
	
atom
	:	INT
	|	ID
	|	'('! expr ')'!
	;
